k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-docker-app
  labels:
    app: simple-docker-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-docker-app
  template:
    metadata:
      labels:
        app: simple-docker-app
    spec:
      containers:
        - name: simple-docker-app
          image: fuad05/simple-docker-app:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "128Mi"
