k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-docker-app-service
spec:
  type: ClusterIP
  selector:
    app: simple-docker-app
  ports:
    - port: 80
      targetPort: 8080
